--- a/potrate.css
+++ b/potrate.css
@@ -4,7 +4,7 @@
         width: 100vw;
         top: -70vh; left: 0;
         z-index: 9;
-        background: linear-gradient(to top right, #ff8585 0%, #7a7aff 97%);
+        background-image: linear-gradient(135deg #131419 0%,#28313b 74%);
         box-shadow: 0 0px 15px rgb(0, 0, 0);
         a{
             color: var(--text-nagative);
